# pulsarX2-macOS

./: LICENSE  README.md  pyproject.toml  setup.py
src/: __init__.py  pulsar_x2_macos.py
src/config/: __init__.py  profiles.py  settings.py
src/controllers/: __init__.py  buttons.py  dpi.py  performance.py  polling.py  power.py
src/ui/: __init__.py  cli.py  interactive.py
src/usb/: __init__.py  usb_monitor.py  usb_protocol.py
