[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulsarX2-macOS-cli"
version = "1.0.0"
description = "Pulsar X2 CLI für macOS"
readme = "README.md"
authors = [{name = "Svetlana Sibiryakova"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
requires-python = ">=3.7"
dependencies = [
    "pyusb>=1.2.1",
]

[project.scripts]
pulsar-x2-config = "src.pulsar_x2_macos:main"
pulsar-usb-monitor = "src.usb.usb_monitor:main"

[project.urls]
"Homepage" = "https://github.com/lana-svetik/pulsarX2-macOS-cli"
"Bug Tracker" = "https://github.com/lana-svetik/pulsarX2-macOS-cli/issues"
